style: fixed vertical spacing on lg devices

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -23,9 +23,8 @@ section
 .section
   align-items: center
 
-  @include breakpoints.responsive-max('md')
+  @include breakpoints.responsive-min('lg')
     min-height: 100dvh
-    padding-top: 128px
 
 .section__about-us__img
   width: 100%
